--- a/buildspec.yml
+++ b/buildspec.yml
@@ -27,7 +27,7 @@ phases:
       # - command
 artifacts:
   files:
-    - '**/*'
+    - WeatherListBuild.zip
     # - location
   discard-paths: yes
-  base-directory: 'output'
+  #base-directory: 'output'
