--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,13 +21,13 @@ phases:
     commands:
       npm run build
       # - command
-  #post_build:
-    #commands:
-      # - command
+  post_build:
+    commands:
+      cd $CODEBUILD_SRC_DIR/build; zip -r ../build.zip *
       # - command
 artifacts:
   files:
-     -  '**/*'
+     -  build.zip
     # - location
-  base-directory: 'build'
+  #base-directory: 'build'
   discard-paths: yes
